@@ -1,0 +1,6 @@
+from sitetables.urls import get_urlpatterns
+
+
+urlpatterns = [
+    get_urlpatterns(),
+]
